terraform/modules/networking/main.tf
resource "aws_vpc" "this" {
    cidr_block = var.vpc
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "${var.environment}-vpc"
    }
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id
    tags = {
        Name = "${var.environment}-igw"
    } 
}

resource "aws_subnet" "public" {
    count = length(var.public_subnet)
    vpc_id = aws_vpc.this.id
    cidr_block = var.public_subnet[count.index]
    availability_zone = var.availability_zone[count.index]
    map_public_ip_on_launch = true
    tags = {
        Name = "${var.environment}-public-subnet-${count.index + 1}"
    }
}

resource "aws_subnet" "private" {
    count = length(var.private_subnet)
    vpc_id = aws_vpc.this.id
    cidr_block = var.private_subnet[count.index]
    availability_zone = var.availability_zone[count.index]
    map_public_ip_on_launch = false
    tags = {
        Name = "${var.environment}-private-subnet-${count.index + 1}"
    }
}

resource "aws_eip" "nat" {
    domain = "vpc"
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public[0].id
  tags = {Name = "${var.environment}-nat"}
  depends_on = [ aws_internet_gateway.this ]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id
    }
    tags = { Name = "${var.environment}-public-rt"}
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }

  tags = {
    Name = "${var.environment}-private-rt"
  }
}

resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)
  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count = length(aws_subnet.private)
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
